--- a/index.html
+++ b/index.html
@@ -1,1 +1,123 @@
-test
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+
+	<title>Test page</title>
+
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
+	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+
+	<link rel="stylesheet" href="assets/css/reset.css">
+	<link rel="stylesheet" href="assets/css/app.css">
+
+	<script src="assets/js/libs/modernizr.foundation.js"></script>
+</head>
+
+<body>	
+
+
+	<div id="homepage" class="container clr">	
+		<header>
+			<div class="titlebar">
+				<h1 class="title"><a href="http://cs.iupui.edu/~lingb/">Bo Ling</a></h1>
+
+				<a href="#" class="bars position-right">
+					<span class="bar"></span>
+					<span class="bar"></span>
+					<span class="bar"></span>
+					<span class="bar"></span>
+				</a>
+			</div>
+
+			<nav class="nav">
+				<a href="index.html" class="nav-button">Main <i class="icon-chevron-right"></i></a>
+				<a href="about.html" class="nav-button">About <i class="icon-chevron-right"></i></a>
+				<a href="contact.html" class="nav-button">Contact <i class="icon-chevron-right"></i></a>
+			</nav>
+
+			<div class="nav-style-changer">
+				<a href="#" class="primary button">Default menu</a>
+				<a href="#nav-style1" class="button">Menu style 1</a>
+				<a href="#nav-style2" class="button">Menu style 2</a>
+				<a href="#nav-style3" class="button">Menu style 3</a>
+				<span>CHANGE BUTTON STYLE</span>
+			</div>
+		</header>
+
+		<div class="content clr">
+			<div class="test">
+				<p><i class="icon-th-large icon-spin"></i> <b>Test page</b></p>
+				<ul>
+					<li><a href="http://www.google.com/">Google</a></li>
+					<li><a href="http://en.wikipedia.org/wiki/Main_Page">Wikipedia</a></li>
+					<li><a href="http://www.cssbuttongenerator.com/">CSS button generator</a></li>
+					<li><a href="http://cssarrowplease.com/">CSS arrow</a></li>
+					<li><a href="http://www.colorzilla.com/gradient-editor/">CSS gradient</a></li>
+					<li><a href="http://colorschemedesigner.com/#3s11Tw0w0w0w0">Color scheme</a></li>
+					<li><a href="http://apps.eky.hk/css-triangle-generator/">Triangle generator</a></li>
+					<li><a href="http://www.jsdb.io/">Javascript libraries</a></li>
+					<li><a href="http://www.ejeliot.com/blog/59">Containing floats</a></li>
+					<li><a href="http://www.clicktorelease.com/blog/how-to-make-clouds-with-css-3d">CSS 3D clouds</a></li>
+				</ul>
+			</div>
+
+			<div class="articles">
+				<h2>Articles</h2>
+				
+				<article class="article-excerpt">
+					<a href="article1.html">
+						<img src="assets/img/pic1.JPG" alt="picture 1" class="thumbnail" />
+						<h3>Article I</h3>
+						<p>And my mistress reeks. And let base of being; And I frame my love what in such a rainy morrow. Sweet self deceivest By wilful taste of more.</p>
+						<i class="icon-chevron-right"></i>
+					</a>
+				</article>
+
+				<article class="article-excerpt">
+					<a href="article2.html">
+						<img src="assets/img/pic2.JPG" alt="picture 2" class="thumbnail" />
+						<h3>Article II</h3>
+						<p>It see I have mine eyes. To this growing age. Like to this thy 'Will.' CXXXVII Thou shouldst print more. The monarch's plague.</p>
+						<i class="icon-chevron-right"></i>
+					</a>
+				</article>
+
+				<article class="article-excerpt">
+					<a href="article3.html">
+						<img src="assets/img/pic3.JPG" alt="picture 3" class="thumbnail" />
+						<h3>Article III</h3>
+						<p>Evermore unrest; My will keep an enjoyer. Great receipt with thy name of sums. Against thy heart be won. Which erst from your sight.</p>
+						<i class="icon-chevron-right"></i>
+					</a>
+				</article>
+
+				<article class="article-excerpt">
+					<a href="article4.html">
+						<img src="assets/img/pic4.JPG" alt="picture 4" class="thumbnail" />
+						<h3>Article IV</h3>
+						<p>Against thy glass shall ever be; And to his heart-inflaming brand. To base touches me excuse my outcast state. And all forwards do fawn upon. </p>
+						<i class="icon-chevron-right"></i>
+					</a>
+				</article>
+			</div>
+		</div>		
+
+		<footer>
+			<p class="copyright">&copy; 2013 - Bo Ling</p>
+		</footer>
+	</div>
+
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="assets/js/libs/jquery-1.9.1.min.js"><\/script>')</script>
+	<script src="assets/js/app.js"></script>       
+</body>
+</html>
