--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="assets/js/libs/jquery-1.9.1.min.js"><\/script>')</script>
+	<script src="assets/js/libs/jqtouch-jquery.min.js" type="application/x-javascript" charset="utf-8"></script>
 	<script src="assets/js/app.js"></script>       
 </body>
 </html>
