--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 	<title>Test page</title>
 
 	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
@@ -23,7 +23,6 @@
 </head>
 
 <body>	
-
 
 	<div id="homepage" class="container clr">	
 		<header>
@@ -119,6 +118,6 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="assets/js/libs/jquery-1.9.1.min.js"><\/script>')</script>
 	<script src="assets/js/libs/jqtouch-jquery.min.js" type="application/x-javascript" charset="utf-8"></script>
-	<script src="assets/js/app.js"></script>       
+	<script src="assets/js/app.js"></script>
 </body>
 </html>
