added normalize.css v2.1.0

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-	<link rel="stylesheet" href="assets/css/reset.css">
+	<link rel="stylesheet" href="assets/css/normalize.css">
 	<link rel="stylesheet" href="assets/css/app.css">
 
 	<script src="assets/js/libs/modernizr.foundation.js"></script>
