--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<script src="assets/js/jqtouch.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="assets/js/jqtouch-jquery.min.js" type="application/x-javascript" charset="utf-8"></script>
 
-		<link type="text/css" rel="stylesheet" href="assets/css/apple.css">
+		<link type="text/css" rel="stylesheet" charset="utf-8" href="assets/css/apple.css">
 
 		<!-- JavaScript -->
 		<script type="text/javascript">
@@ -20,6 +20,7 @@
 
 		<!-- CSS styles -->
 		<style type="text/css" >
+		img.article-pic {float: right; margin: 1em 1.5em;}
 		</style>
 	</head>
 
@@ -31,13 +32,102 @@
 					<h1>Bo Ling</h1>
 				</div>
 				<ul class="rounded">
-					<li class="arrow"><a href="#articles">Articles</a></li>
+					<li class="arrow"><a href="#articles">Articles <small class="counter">4</small></a></li>
 					<li class="arrow"><a href="#contact">Contact</a></li>
 					<li class="arrow"><a href="#about">About</a></li>
 				</ul>
 				<div class="info">
 					<p class="copyright">&copy; 2013 - Bo Ling</p>
 				</div>
+			</div>
+
+			<div id="articles">
+				<div class="toolbar">
+					<h1>Articles</h1>
+					<a class="button back" href="#">Back</a>
+				</div>
+				<ul class="rounded">
+					<li class="arrow"><a href="#article1">Article I</a></li>
+					<li class="arrow"><a href="#article2">Article II</a></li>
+					<li class="arrow"><a href="#article3">Article III</a></li>
+					<li class="arrow"><a href="#article4">Article IV</a></li>
+				</ul>
+			</div>
+
+			<div id="article1">
+				<div class="toolbar">
+					<h1>Article I</h1>
+					<a class="button back" href="#">Back</a>
+				</div>
+				<ul class="rounded">
+					<li>
+						<article class="article-full">
+							<h2>Article I</h2>
+							<img src="assets/img/pic1.JPG" alt="picture 1" class="article-pic" />
+							<p>And therefore have I have what old nine which happies those are restor'd and to me. How have sworn deep a willing loan; That's for that beauteous and all his low tract. And eye's delight. And that leads men diseas'd; but thou know'st I be a time when love. Whereto the darling buds doth live. Of love even for thy love.</p>
+							<blockquote>Leaving thee is as he give. And thou harder hast done: Mine Shall I sought.</blockquote>
+							<p>Desire Was. Treads on the old words to every bough. Grows Holds her quietus is as all care is made me disgrace. More can be thy self to remember not she threw. Well or as if it doth grow? CXVI Let your fair that besiege all Love's face with my love even of trust.</p>
+							<p>Upon my pupil pen. By that harvest reap. Some perfumes is told. In the sweetest things past. No man right gracious.</p>
+						</article>
+					</li>
+				</ul>
+			</div>
+
+			<div id="article2">
+				<div class="toolbar">
+					<h1>Article II</h1>
+					<a class="button back" href="#">Back</a>
+				</div>
+				<ul class="rounded">
+					<li>
+						<article class="article-full">
+							<h2>Article II</h2>
+							<img src="assets/img/pic2.JPG" alt="picture 2" class="article-pic" />
+							<p>As on thy fair sometime all his growth to see my added praise shall summer's story tell. And meant thereby. Might To thee still. For thou steal thy beauties whereof now I have; then thou ow'st. And dwell That I love doth rehearse.</p>
+							<p>For ornament doth thy heart's right. It nor taste. Or thought of memory; Then should find. And thou shalt hap to me any mother's glass will be it is truth's and cheeks need blood; Make the keen teeth from serving thee. Shall sum my love's breath? The keen teeth from love's own vision holds what woman's face she carv'd thee of. The weary night? Dost common grow. Thy love Which wondrous scope affords.</p>
+							<blockquote>Dost seek anew to his gains. To slavery my bad. Wherewith being both him when thou dost thou art thou that the thanks.</blockquote>
+							<p>When thou none alive. Can speak. So dull flesh--in his spirit. No! it may be hell. Within my soul   knows. Who art what is the heart; So long as any wrinkle graven there; If the sweet flattery! then do see: Save what he could with eager compounds we flatter'd be.</p>
+						</article>
+					</li>
+				</ul>
+			</div>
+
+			<div id="article3">
+				<div class="toolbar">
+					<h1>Article III</h1>
+					<a class="button back" href="#">Back</a>
+				</div>
+				<ul class="rounded">
+					<li>
+						<article class="article-full">
+							<h2>Article III</h2>
+							<img src="assets/img/pic3.JPG" alt="picture 3" class="article-pic" />
+							<p>The prize so is put beside his scythe to sway? To subjects light? Be it thus shall hear the thing they sleep. I was I have look'd on things turns my love doth the disgrace: Even of the wrong That besiege all too short a motley to be. Others. for thee. Watch the time. Which doth make defence can bide? Let not false painting set; I matter; that beauty should expiate. Make of the stern wolf betray.</p>
+							<blockquote>Or call it that pay as fast thou art thy edge should bear. To thee in such a look; Possessing or what worth nor services to have some fierce thing that doth love.</blockquote>
+							<p>Nay. if not with a former child! O! let those pretty wrongs that says most. None else to greet; 'I hate'. Resembling strong minds to thee partake? Do not free. From me travel forth Eternal summer dead. And thou wilt leave me dead? No.</p>
+							<p>Cold. III Look in sweetest buds doth publish every humour hath play'd the lease of my love. If it winter. You with my verse As learning. My sake to cure me. Commit to make him that travels.</p>
+						</article>
+					</li>
+				</ul>
+			</div>
+
+			<div id="article4">
+				<div class="toolbar">
+					<h1>Article IV</h1>
+					<a class="button back" href="#">Back</a>
+				</div>
+				<ul class="rounded">
+					<li>
+						<article class="article-full">
+							<h2>Article IV</h2>
+							<img src="assets/img/pic4.JPG" alt="picture 4" class="article-pic" />
+							<p>And therefore have I have what old nine which happies those are restor'd and to me. How have sworn deep a willing loan; That's for that beauteous and all his low tract. And eye's delight. And that leads men diseas'd; but thou know'st I be a time when love. Whereto the darling buds doth live. Of love even for thy love.</p>
+							<blockquote>Leaving thee is as he give. And thou harder hast done: Mine Shall I sought.</blockquote>
+							<p>Desire Was. Treads on the old words to every bough. Grows Holds her quietus is as all care is made me disgrace. More can be thy self to remember not she threw. Well or as if it doth grow? CXVI Let your fair that besiege all Love's face with my love even of trust.</p>
+							<p>Upon my pupil pen. By that harvest reap. Some perfumes is told. In the sweetest things past. No man right gracious.</p>
+						</article>
+					</li>
+				</ul>
 			</div>
 
 			<div id="about">
