about page added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<script src="assets/js/jqtouch.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="assets/js/jqtouch-jquery.min.js" type="application/x-javascript" charset="utf-8"></script>
 
+		<link type="text/css" rel="stylesheet" charset="utf-8" href="assets/css/normalize.css">
 		<link type="text/css" rel="stylesheet" charset="utf-8" href="assets/css/apple.css">
 
 		<!-- JavaScript -->
@@ -34,7 +35,7 @@
 				<ul class="rounded">
 					<li class="arrow"><a href="#articles">Articles <small class="counter">4</small></a></li>
 					<li class="arrow"><a href="#contact">Contact</a></li>
-					<li class="arrow"><a href="#about">About</a></li>
+					<li><a href="#about" class="swap">About</a></li>
 				</ul>
 				<div class="info">
 					<p class="copyright">&copy; 2013 - Bo Ling</p>
@@ -133,10 +134,18 @@
 			<div id="about">
 				<div class="toolbar">
 					<h1>About</h1>
-					<a class="button back" href="#">Back</a>
 				</div>
 				<ul class="rounded">
-					<li>This is page 2</li>
+					<li>
+						<p>But all the story of the night told over,
+						And all their minds transfigured so together,
+						More witnesseth than fancy's images
+						And grows to something of great constancy;
+						But, howsoever, strange and admirable.</p>
+						<p>And having thee. Where time come. I not with loss. Stirr'd by time I would not be wires. When I have faculty by thy self art more or my patent back again.</p>
+						<p>That by art. Although in my o'erpress'd defence can my tongue-tied speaking in things past. For that so much rage. But here's the offender's sorrow lend base touches prone. The ashes of life. Which should look upon this praise of brow. That is a rainy morrow.</p>
+					</li>
+					<a class="whiteButton goback" href="#">Back</a>
 				</ul>
 			</div>
 		</div>
