contact page added, basic app complete

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 		<link type="text/css" rel="stylesheet" charset="utf-8" href="assets/css/normalize.css">
 		<link type="text/css" rel="stylesheet" charset="utf-8" href="assets/css/apple.css">
+		<link type="text/css" rel="stylesheet" charset="utf-8" href="assets/css/font-awesome.min.css">
 
 		<!-- JavaScript -->
 		<script type="text/javascript">
@@ -127,6 +128,55 @@
 							<p>Desire Was. Treads on the old words to every bough. Grows Holds her quietus is as all care is made me disgrace. More can be thy self to remember not she threw. Well or as if it doth grow? CXVI Let your fair that besiege all Love's face with my love even of trust.</p>
 							<p>Upon my pupil pen. By that harvest reap. Some perfumes is told. In the sweetest things past. No man right gracious.</p>
 						</article>
+					</li>
+				</ul>
+			</div>
+
+			<div id="contact">
+				<div class="toolbar">
+					<h1>Contact Form</h1>
+					<a class="button back" href="#">Back</a>
+				</div>
+				<ul class="rounded">
+					<li>
+						<form>
+							<div class="input-box">
+								<label for="firstname">First name:</label>
+								<input type="text" name="firstname" value="" placeholder="William" id="firstname" size="30" maxlength="30" />
+							</div>
+
+							<div class="input-box">
+								<label for="name">Last name:</label>
+								<input type="text" name="lastname" value="" placeholder="Shakespeare" id="lastname" size="30" maxlength="30" />
+							</div>
+
+							<div class="input-box">
+								<label for="email">Email:</label>
+								<input type="email" name="email" value="" placeholder="email@something.com" id="email" size="30" maxlength="30" />
+							</div>
+
+							<div class="input-box">
+								<label for="phone">Phone number:</label>
+								<input type="tel" name="phone" value="" placeholder="###-###-####" id="phone" size="12" maxlength="12"/>
+							</div>
+
+							<div class="input-box">
+								<label for="message">Message:</label>
+								<textarea name="message" placeholder="Enter a message" id="message" cols="33" rows="3"></textarea>
+							</div>
+
+							<input type="submit"><i class="icon-envelope"></i></input>
+							<input type="reset"/>
+						</form>
+					</li>
+					<li>
+						<fieldset>
+							<legend>Contact Info</legend>
+							<ul>
+								<li><a href="callto:123-456-7890"><i class="icon-phone"></i> 123-456-7890</a></li>
+								<li><a href="mailto:test@test.com"><i class="icon-envelope"></i> test@test.com</a></li>
+							</ul>
+						</fieldset>
 					</li>
 				</ul>
 			</div>
