--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>jqtouch page</title>
-
-		<script src="assets/js/jquery-1.9.1.min.js" type="application/x-javascript" charset="utf-8"></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		
+		<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+		<!--[if lt IE 9]>
+			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
+		
+		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+		<script>window.jQuery || document.write('<script src="assets/js/jquery-1.9.1.min.js"><\/script>')</script>
 		
 		<script src="assets/js/jqtouch.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="assets/js/jqtouch-jquery.min.js" type="application/x-javascript" charset="utf-8"></script>
